--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "450 DSA",
-	"name": "450 DSA Cracker",
+	"short_name": "CodersVault",
+	"name": "CodersVault",
 	"icons": [
 		{
 			"src": "favicon.ico",
